Updates to: Promises, Iterables, Arrays, and syntax. + Added first pass at `setTimeout` (still needs to be cancellable) Syntax highlights: + nil coalescing operator `??` + added nilable modifier to coercives (e.g. `function?`) + shortcut for #{} and #[] forms (performance) + added `static` as a modifier to properties in object literal (still unsure whether this is a good idea) + trailing comma in array literal means nil + trailing comma in object literal not allowed

--- a/runtime/proto/Function.ejs
+++ b/runtime/proto/Function.ejs
@@ -77,3 +77,15 @@ function Bind(obj, receiver) {
 		bound = lazyBind(f, receiver);
 	return CreateFunction(FunctionProto, bound, f.length + 1);
 }
+
+function AsCoercive(f, nilable) {
+	if (!IsCallable(f))
+		throw new TypeError('Function expected');
+	if (nilable)
+		return CreateFunction(null, function(value) {
+			if (value === null || value === undefined)
+				return undefined;
+			return Call(f, undefined, [ value ]);
+		}, 1);
+	return f;
+}
