--- a/runtime/wrap.ejs
+++ b/runtime/wrap.ejs
@@ -13,24 +13,14 @@
 
 	(function() {
 
-		var Object, Boolean, Number, String, Array, Function, Range, Symbol,
-			Generator, Promise, reflect, boolean, number, int, uint, string,
-			function_, inf, setTimeout;
+		<% include definitions %>
+
+		var boolean, number, int, uint, string, function_, object, setTimeout,
+			PromiseGroup;
 
 		(function() {
 
-			Object = $__proto__$.Object;
-			Boolean = $__proto__$.Boolean;
-			Number = $__proto__$.Number;
-			String = $__proto__$.String;
-			Array = $__proto__$.Array;
-			Function = $__proto__$.Function;
-			Range = $__proto__$.Range;
-			Symbol = $__proto__$.Symbol;
-			Generator = $__proto__$.Generator;
-			Promise = $__proto__$.Promise;
-			reflect = $__proto__$.reflect;
-			inf = $__proto__$.Infinity;
+			<% include definitions %>
 
 			var P = $__proto__$.toWrapped();
 			<%- _transpileFile('built-ins/built-ins.proto') %>
