--- a/runtime/proto/Function.ejs
+++ b/runtime/proto/Function.ejs
@@ -89,3 +89,67 @@ function AsCoercive(f, nilable) {
 		}, 1);
 	return f;
 }
+
+function PartiallyApply(f, appliedArgs) {
+	if (!IsCallable(f))
+		throw new TypeError('Function expected');
+	if (!isArray(appliedArgs))
+		throw new TypeError('Array expected');
+	return CreateFunction(undefined, function() {
+		var args = create(null),
+			unusedIndices = create(null),
+			arg, slot, rest, unused, i;
+		args.length = 0;
+		for (i = 0; i < arguments.length; i++)
+			unusedIndices[i] = i;
+		unusedIndices.length = arguments.length;
+		// First pass: Replace slots that are explicit indices and note which
+		// ones have been used.
+		for (i = 0; i < appliedArgs.length; i++) {
+			arg = appliedArgs[i];
+			if (IsWrapper(arg) && 'Slot' in arg) {
+				slot = arg.Slot;
+				if (typeof slot == 'number') {
+					if (sign(slot) == -1)
+						slot = arguments.length - 1 + slot;
+					delete unusedIndices[slot];
+					push(args, arguments[slot]);
+				}
+				else if (slot === null || slot === 'rest')
+					push(args, arg);
+				else
+					throw new Error('Invalid slot value');
+			}
+			else
+				push(args, arg);
+		}
+		// Collapse unusedIndices array
+		for (i = unusedIndices.length - 1; i >= 0; i--)
+			if (!(i in unusedIndices))
+				splice(unusedIndices, i, 1);
+		// Second pass: Fill in implicit slots
+		for (i = 0; i < args.length; i++) {
+			arg = args[i];
+			if (IsWrapper(arg) && 'Slot' in arg) {
+				slot = arg.Slot;
+				if (slot === null)
+					args[i] = arguments[shift(unusedIndices)];
+				else if (slot === 'rest' && rest === undefined)
+					rest = i;
+				else
+					throw new Error('Unexpected slot value');
+			}
+		}
+		// Fill in rest slot
+		if (rest !== undefined) {
+			unused = create(null);
+			unused.length = 0;
+			for (i = 0; i < unusedIndices.length; i++)
+				push(unused, arguments[unusedIndices[i]]);
+			spliceAll(args, rest, 1, unused);
+		}
+		Call(f, this, slice(args));
+	}, appliedArgs.length);
+	// TODO: Adjust length for rest slots (probably subtract one if there's a rest slot)
+	// TODO: Enforce only one rest slot permitted (in parser)
+}
