Updated slots + Now they are full expression literals which can be used anywhere + They can contain ranges (e.g. `<2..5>`) + They can be constructed as regular objects (`new Slot(expr)`)

--- a/runtime/definitions.ejs
+++ b/runtime/definitions.ejs
@@ -1,4 +1,4 @@
-var Object, Boolean, Number, String, Array, Function, Range, Symbol,
+var Object, Boolean, Number, String, Array, Function, Range, Symbol, Slot,
 	Generator, Promise, reflect, inf;
 
 Object = $__proto__$.Object;
@@ -9,6 +9,7 @@ Array = $__proto__$.Array;
 Function = $__proto__$.Function;
 Range = $__proto__$.Range;
 Symbol = $__proto__$.Symbol;
+Slot = $__proto__$.Slot;
 Generator = $__proto__$.Generator;
 Promise = $__proto__$.Promise;
 reflect = $__proto__$.reflect;
