--- a/runtime/proto/proto.ejs
+++ b/runtime/proto/proto.ejs
@@ -22,6 +22,7 @@ var proto = (function() {
 		getOwnPropertyDescriptor = Object.getOwnPropertyDescriptor,
 		isArray = Array.isArray,
 		min = Math.min,
+		max = Math.max,
 		floor = Math.floor,
 		abs = Math.abs,
 
@@ -51,6 +52,7 @@ var proto = (function() {
 		RangeProto = CreateObject(ObjectProto),
 		PromiseProto = CreateObject(ObjectProto),
 		SymbolProto = CreateObject(ObjectProto),
+		SlotProto = CreateObject(ObjectProto),
 		GeneratorProto = CreateObject(ObjectProto),
 		reflect = CreateObject(ObjectProto),
 
@@ -420,6 +422,7 @@ var proto = (function() {
 		Date: DateProto,
 		Range: RangeProto,
 		Symbol: SymbolProto,
+		Slot: SlotProto,
 		Generator: GeneratorProto,
 		Promise: PromiseProto,
 		reflect: reflect,
@@ -437,8 +440,9 @@ var proto = (function() {
 		CreateRange: CreateRange,
 		CreateSymbol: CreateSymbol,
 		CreateSymbolPrimitive: CreateSymbolPrimitive,
-		CreateSlot: CreateSlot,
 		SymbolInit: SymbolInit,
+		CreateSlot: CreateSlot,
+		SlotInit: SlotInit,
 		CreateGeneratorFunction: CreateGeneratorFunction,
 		GeneratorInit: GeneratorInit,
 		GeneratorNext: GeneratorNext,
