--- a/runtime/wrap.ejs
+++ b/runtime/wrap.ejs
@@ -15,8 +15,7 @@
 
 		<% include definitions %>
 
-		var boolean, number, int, uint, string, function_, object, setTimeout,
-			PromiseGroup;
+		var boolean, number, int, uint, string, function_, object, setTimeout;
 
 		(function() {
 
